# SFGD_Framework

./: .gitignore  LICENSE  README.md
analysis/: CMakeLists.txt  README.md
analysis/lib/: EventDict.cxx  libEventDict.rootmap  libEventDict_rdict.pcm
analysis/macros/algorithmsValidation/: CMakeLists.txt  lightReconstruction.cc  trackFinding.cc  trackFinding2.cc  tracking.cc
analysis/macros/che/: 3D_EventGamma.cpp  3D_EventTrajectory.cpp  3D_EventTrajectorySide.cpp  BetaDistribution.cpp  CMakeLists.txt  CalibPlots.cpp  CalibrationManager.cpp  CalibrationManager.hh  DecayMuonDistribution.cpp  EventDisplayLite.cpp  GainCalculations.cpp  GammaDistribution.cpp  Hit3DReconstructor.cpp  Hit3DReconstructor.hh  Hit3DTypes.hh  MuonDecayEvents.cpp  SingleTrackFilter.cpp  Theta_phi.cpp  VoxelTrackLength.cpp
analysis/macros/crosstalk/: CMakeLists.txt  crosstalkDist.cc
analysis/macros/muonDecay/: CMakeLists.txt  muonDecay.cc
analysis/macros/neuralNet/: CMakeLists.txt  inputNN.cc
analysis/macros/pionReco/: CMakeLists.txt  pionReco.cc
analysis/macros/template/: CMakeLists.txt  templateAna.cc
analysis/macros/wilfs/: 3D_EventDisplays.cpp  3D_EventTrajectorySide_bk  3D_EventTrajectory_bk  CMakeLists.txt  CMakeLists_old.txt  EventDisplayLite_bk  Theta_phi.cpp.backup  Time_offset.cpp  Time_res_muon.cpp  Time_res_muon_all.cpp  VoxelDistanceFilter_Event.cpp  VoxelDistanceFilter_Folder.cpp  VoxelTrackLength_Folder.cpp  afterpulseCo.cpp  cubeLightYield.cpp  eventDisplay.cpp  gainPlots.cpp  hitThreshold.cpp  muon_selection.cpp  nDataQuality.cpp  nEnergySpectrum.cpp  nEnergySpectrum2.cpp  nEventDisplay.cpp  nEventDisplayTime.cpp  nEventsMap.cpp  nEventsMapUSJ.cpp  nExtinction.cpp  timeRes.cpp  timeRes2.cpp
analysis/src/: CMakeLists.txt  LinkDef.h
analysis/src/HitsRecon_Analysis/: Hits3D_Reconstruction.cc  Hits3D_Reconstruction.hh
analysis/src/classes/: Event.hh  Hit.cc  Hit.hh  ND280SFGDHit.hh  ND280SFGDVoxelSet.cc
analysis/src/reconstruction/: FillTrueInformationInRecoEvent.cc  FindBranchingPoints.cc  FindClusters.cc  FindTrackCandidates.cc  FindTrackSegments.cc  FindTracks.cc  HitsToVoxels.cc  MatchRecoToTrueTracks.cc  MergeHits.cc  MergeTrackSegments.cc  ReconstructVoxelsPE.cc  TrackFitter.cc
analysis/src/tools/: global_header.hh  global_tools.cc  reconstruction_methods.hh
analysis/src/tools/calibration_files/: gain_calibration_62000_no3.txt  gain_calibration_62000_time3.txt  gain_calibration_strict_40841_time3.txt  gain_calibration_strict_68813_no3.txt  gain_calibration_strict_68813_time3.txt  gain_no_calibration.txt
data_preprocessing/: CMakeLists.txt  README.md  analysis_exp.C
data_preprocessing/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
data_preprocessing/build-debug/macros/: Makefile  cmake_install.cmake
data_preprocessing/build-debug/src/: EventDict.cxx  Makefile  cmake_install.cmake  libEventDict_rdict.pcm
data_preprocessing/macros/: CMakeLists.txt  Calibration.cpp  EventStructure.cpp  EventStructure_12free.cpp  EventStructure_12free_old  EventStructure_MC.cpp  EventStructure_MC2.cpp  EventStructure_MC_highAngle.cpp  EventStructure_MC_pion.cpp  EventStructure_MC_proton.cpp  EventStructure_MC_update.cpp  EventStructure_MC_update_old.cpp  EventStructure_cosmics.cpp  EventStructure_modified.cpp  HG_LG_calib.cpp  HG_vs_ToT_calib.cpp  LG_vs_ToT_calib.cpp  Unpack.cpp  auto_check.cpp  auto_dq.cpp
data_preprocessing/mapping/: 2.txt  56.txt  56_al.txt  57.txt  57_al.txt  58_al.txt  58_old.txt  59.txt  59_al.txt  60.txt  60_al.txt  61.txt
data_preprocessing/scripts/: Submit.sub  gain_calibration.txt  list1  list2  unpack.py
data_preprocessing/src/: CMakeLists.txt  LinkDef.h  MDdataFile.cpp  MDdataWordBM.cpp  MDdataWordBM.h  MDfragmentBM.cpp  MDfragmentBM.h  MDpartEventBM.cpp  global_header.hh
