message(STATUS "building wilfs workspace... ")
if    (ROOT_FOUND)
  ADD_EXECUTABLE(nEventDisplay                   nEventDisplay.cpp)
  TARGET_LINK_LIBRARIES(nEventDisplay            SuperFGD_Analysis ${ROOT_LIBRARIES})
  ADD_EXECUTABLE(3D_EventDisplays                   3D_EventDisplays.cpp)
  TARGET_LINK_LIBRARIES(3D_EventDisplays           SuperFGD_Analysis ${ROOT_LIBRARIES})
  ADD_EXECUTABLE(VoxelDistanceFilter_Event                   VoxelDistanceFilter_Event.cpp)
  TARGET_LINK_LIBRARIES(VoxelDistanceFilter_Event          SuperFGD_Analysis ${ROOT_LIBRARIES})
  ADD_EXECUTABLE(VoxelDistanceFilter_Folder                   VoxelDistanceFilter_Folder.cpp)
  TARGET_LINK_LIBRARIES(VoxelDistanceFilter_Folder          SuperFGD_Analysis ${ROOT_LIBRARIES})
endif (ROOT_FOUND)
